<resources>
    <string name="app_name">TagAlbum</string>
    <string name="item_count">(%d)</string>
    <string name="toolbar_title">@string/app_name</string>
    <string name="content_description_picture">picture</string>
    <string name="add_tags">添加标签</string>
    <string name="textinput_addtags">添加标签</string>
    <string name="search_hint">搜索</string>
    <string name="op_channel_id">foregound_opt_channel_id</string>
    <string name="op_channel_name">foregound_opt</string>
    <string name="op_channel_description">Foregound Operation</string>
    <string name="delete">删除</string>
    <string name="add_color_tag">添加颜色标签</string>
    <string name="copy">复制</string>
    <string name="move">移动</string>
    <string name="clear">清除</string>
    <string name="select_all">全选</string>
    <string name="opt_finished">操作完成：</string>
    <string name="opt_fail">操作失败：</string>
    <string name="dir_no_exists">目录不存在</string>
    <string name="fail_create_file">无法创建文件</string>
    <string name="io_exception">IO错误</string>
    <string name="fail">失败</string>
    <string name="fail_del_tag">删除标签失败</string>
    <string name="notification_channel_id">notification_channel_id</string>
    <string name="notification_channel_name">Default Notifications</string>
</resources>
