<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_item_count"
        android:orderInCategory="1"
        android:title="0"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="1"
        android:title="@string/clear"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="2"
        android:title="@string/select_all"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_del"
        android:orderInCategory="3"
        android:title="@string/delete"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_cpy"
        android:orderInCategory="4"
        android:title="@string/copy"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_move"
        android:orderInCategory="5"
        android:title="@string/move"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_add_color_tag"
        android:orderInCategory="6"
        android:title="@string/add_color_tag"
        app:showAsAction="collapseActionView" />
</menu>